force-app/main/default/objects/Product2/fields/APRC__c.field-meta.xml
<CustomField>
    <fullName>APRC__c</fullName>
    <label>APRC</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>