force-app/main/default/objects/Product2/fields/Cost_after_full_term__c.field-meta.xml
<CustomField>
    <fullName>Cost_after_full_term__c</fullName>
    <label>Cost after full term</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>