force-app/main/default/objects/Product2/fields/Cost_after_initial_period__c.field-meta.xml
<CustomField>
    <fullName>Cost_after_initial_period__c</fullName>
    <label>Cost after initial period</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>