force-app/main/default/objects/Product2/fields/Disclaimer__c.field-meta.xml
<CustomField>
    <fullName>Disclaimer__c</fullName>
    <label>Disclaimer</label>
    <type>TextArea</type>
</CustomField>