force-app/main/default/objects/Product2/fields/ERC_period__c.field-meta.xml
<CustomField>
    <fullName>ERC_period__c</fullName>
    <label>ERC period</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>