force-app/main/default/objects/Product2/fields/Initial_monthly_cost__c.field-meta.xml
<CustomField>
    <fullName>Initial_monthly_cost__c</fullName>
    <label>Initial monthly cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>