force-app/main/default/objects/Product2/fields/Initial_rate_period__c.field-meta.xml
<CustomField>
    <fullName>Initial_rate_period__c</fullName>
    <label>Initial rate period</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>