force-app/main/default/objects/Product2/fields/Inititial_term_cost__c.field-meta.xml
<CustomField>
    <fullName>Inititial_term_cost__c</fullName>
    <label>Inititial term cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>