force-app/main/default/objects/Product2/fields/Lender__c.field-meta.xml
<CustomField>
    <fullName>Lender__c</fullName>
    <description>Lender</description>
    <inlineHelpText>Lender</inlineHelpText>
    <label>Lender</label>
    <length>255</length>
    <type>Text</type>
</CustomField>