force-app/main/default/objects/Product2/fields/Loan_required__c.field-meta.xml
<CustomField>
    <fullName>Loan_required__c</fullName>
    <label>Loan required</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>