force-app/main/default/objects/Product2/fields/Reversion_rate__c.field-meta.xml
<CustomField>
    <fullName>Reversion_rate__c</fullName>
    <label>Reversion rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>